# forterra

./: .env.example  .gitignore  GUIDE.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml
examples/: insecure-infra.tf  sample-plan.json
forterra/: __init__.py  ai_engine.py  cli.py  generator.py  learn.py  plan_analyzer.py  scanner.py
tests/: test_scanner.py
